# a12_python_capacitacion_axity

./: .gitignore  .pre-commit-config.yaml
fundamental/modulo_01_entorno_herramientas/: .pre-commit-config.yaml  pyproject.toml
fundamental/modulo_01_entorno_herramientas/src/modulo_01_entorno_herramientas/: app.py
fundamental/modulo_01_entorno_herramientas/tests/: test_app.py
fundamental/modulo_02_fundamentos_lenguaje/: pyproject.toml
fundamental/modulo_02_fundamentos_lenguaje/data/: ventas.json
fundamental/modulo_02_fundamentos_lenguaje/src/: procesar_json.py
fundamental/modulo_03_funciones_pythonic/: pyproject.toml
fundamental/modulo_03_funciones_pythonic/src/: lab_funciones_pythonic.py
fundamental/modulo_03_funciones_pythonic/tests/: test_lab_funciones_pythonic.py
fundamental/modulo_04_objetos_modelos_datos/: README.md  pyproject.toml
fundamental/modulo_04_objetos_modelos_datos/src/modulo_04_objetos_modelos_datos/: main.py  order_models.py  test.ipynb
fundamental/modulo_04_objetos_modelos_datos/tests/: test_order_models.py
fundamental/modulo_05_tipado_calidad/: README.md  pyproject.toml
fundamental/modulo_05_tipado_calidad/src/modulo_05_tipado_calidad/: __init__.py  order_models.py  typing_examples.py
fundamental/modulo_05_tipado_calidad/tests/: test_order_models.py  test_typing_examples.py
fundamental/modulo_06_libreria_estandar_e_s/: README.md  pyproject.toml
fundamental/modulo_06_libreria_estandar_e_s/data/input/: sales.csv
fundamental/modulo_06_libreria_estandar_e_s/data/output/: summary.json
fundamental/modulo_06_libreria_estandar_e_s/src/modulo_06_libreria_estandar_e_s/: __init__.py  io_utils.py  logger_config.py  main.py  metrics.py  models.py
fundamental/modulo_06_libreria_estandar_e_s/tests/: test_io_utils.py  test_metrics.py
fundamental/modulo_07_http_apis/: README.md  pyproject.toml
fundamental/modulo_07_http_apis/src/modulo_07_http_apis/: __init__.py  client.py  exceptions.py  logger_config.py  main.py  models.py  retry.py
fundamental/modulo_07_http_apis/tests/: test_client.py  test_retry.py
