[project]
name = "modulo-02-fundamentos-lenguaje"
version = "0.1.0"
description = ""
authors = [
    {name = "alexjt1917",email = "alejandro.juarezt@axity.com"}
]
requires-python = ">=3.12"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
