[project]
name = "modulo-03-funciones-pythonic"
version = "0.1.0"
description = ""
authors = [
    { name = "alexjt1917", email = "alejandro.juarezt@axity.com" }
]
requires-python = ">=3.12"
dependencies = []

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black>=24.0.0,<25.0.0",
    "isort>=5.13.0,<6.0.0",
    "ruff>=0.6.0,<1.0.0",
    "pre-commit>=3.8.0,<5.0.0"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
py_version = 312

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I"]