[project]
name = "modulo-04-objetos-modelos-datos"
version = "0.1.0"
description = ""
authors = [
    {name = "alexjt1917",email = "alejandro.juarezt@axity.com"}
]
requires-python = ">=3.12"
dependencies = [
    "pydantic (>=2.13.1,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "ruff (>=0.15.10,<0.16.0)"
]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.poetry]
packages = [{ include = "modulo_04_objetos_modelos_datos", from = "src" }]