[project]
name = "modulo-07-http-apis"
version = "0.1.0"
description = "Laboratorio del módulo 7: HTTP y consumo de APIs"
authors = [
    { name = "alexjt1917", email = "alejandro.juarezt@axity.com" }
]
requires-python = ">=3.12"
dependencies = [
    "httpx (>=0.28.0,<1.0.0)"
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "pytest (>=9.0.3,<10.0.0)",
    "black (>=26.3.1,<27.0.0)",
    "isort (>=8.0.1,<9.0.0)",
    "ruff (>=0.15.10,<0.16.0)",
    "mypy (>=1.18.0,<2.0.0)"
]

[tool.poetry]
packages = [{ include = "modulo_07_http_apis", from = "src" }]

[tool.black]
line-length = 88
target-version = ["py312"]

[tool.isort]
profile = "black"
line_length = 88
src_paths = ["src", "tests"]

[tool.ruff]
line-length = 88
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.12"
strict = true
mypy_path = "src"
warn_unused_ignores = true
warn_redundant_casts = true

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]